--- a/css/style.css
+++ b/css/style.css
@@ -1,227 +1,349 @@
+
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
+	-webkit-box-sizing: border-box;
+			box-sizing: border-box;
+	margin: 0;
+	border: 0;
+
 }
 
-header {
-  position: relative;
-  height: 50px;
+html {
+	font-family: 'Roboto', sans-serif;
 }
-
-nav {
-  position: fixed;
-  width: 100%;
-  height: 50px;
-  background-color: #212121;
-  z-index: 2;
-}
-
-.menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 13px 70px;
-  margin: 0;
-  list-style-type: none;
-}
-
-.menu .menu_link {
-  color: #ffffff;
-  font-size: 15px;
-  font-weight: 300;
-}
-
-.menu .menu_item {
-  border-right: 2px dotted black;
-  padding-right: 28px;
-}
-
-.subheader {
-  position: absolute;
-  top: 50px;
-  width: 100%;
-  height: 84px;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.subheader .subheader_logo {
-  display: block;
-  width: 100%;
-  margin-top: 16px;
-}
-
-.subheader .subheader_official {
-  margin-top: 6px;
-  opacity: 0.5;
-  color: #ffffff;
-  font-size: 13px;
-  font-weight: 400;
-}
-
-.subheader .subheader_call {
-  margin-top: 19px;
-  color: #ffffff;
-  font-size: 12px;
-  font-weight: 300;
-  text-align: right;
-}
-
-.subheader .subheader_phone {
-  display: block;
-  margin-top: 8px;
-  color: #ffffff;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 12px;
-  text-align: right;
-  text-transform: uppercase;
-}
-
-.subheader .subheader_btn {
-  margin-top: 19px;
-  width: 172px;
-  height: 46px;
-  -webkit-box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
-  border: none;
-  border-radius: 4px;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#1eacc7), to(#4ce2ff));
-  background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 400;
-  text-transform: uppercase;
+	
+.container {
+	position: relative;
+	width: 1140px;
+	margin: 0 auto;
 }
 
 .promo {
-  min-height: 800px;
-  background: url("../img/mine_bg.jpg") center center/cover no-repeat;
-  padding: 150px 0 135px 0;
+	height: 800px;
+	background: url('../img/main_bg.jpg') center center/cover no-repeat;
+	padding: 39px 0 62px 0;
+} 
+
+.logo .logo_img {
+	display: block;
+	margin: 0 auto;
 }
 
-.promo .promo_header {
-  color: #ffffff;
-  font-size: 60px;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 60px;
-  margin: 0;
-  text-align: center;
+.logo .logo_text {
+	color: #ffffff;
+	font-size: 15px;
+	font-weight: 500;
+	line-height: 24px;
+	text-transform: uppercase;
+	text-align: center;
+	margin-top: 14px;
 }
-
-.promo .promo_subheader {
-  color: #ffffff;
-  font-size: 36px;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 36px;
-  margin: 0;
-  margin-top: 22px;
-  text-align: center;
-}
-
-.promo .promo_descr {
-  margin-top: 23px;
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: center;
-}
-
-.promo .promo_btn {
-  display: block;
-  margin: 118px auto 0 auto;
-  width: 259px;
-  height: 63px;
-  -webkit-box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12);
-  border: none;
-  border-radius: 4px;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#1eacc7), to(#4ce2ff));
-  background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: 400;
-  text-transform: uppercase;
-}
-
-.reason {
-  padding: 71px 0 65px 0;
-}
-
-.label {
-  margin: 0 auto;
-  width: 112px;
-  height: 24px;
-  padding: 5px 12px;
-  background-color: #000000;
-  color: #ffffff;
-  font-size: 11px;
-  font-weight: 300;
-  text-transform: uppercase;
+ 
+h1 {
+   margin-top: 53px;
 }
 
 .title {
-  margin-bottom: 0;
-  margin-top: 38px;
-  color: #222222;
-  font-size: 38px;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-align: center;
+	color: #f9bf3b;
+	font-size: 41px;
+	font-weight: 900;
+	line-height: 24px;
+	text-transform: uppercase;
+	text-align: center;
 }
 
-.reason .reason_block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-top: 35px;
+h2.title {
+	margin-top: 30px;
 }
 
-.reason .reason_block .reason_round {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-right: 26px;
-  width: 113px;
-  height: 113px;
-  background-color: #1eacc7;
-  border-radius: 100%;
+.simple .title_big {
+	color: #ffffff;
+	font-size: 80px;
+	font-weight: 900;
+	text-transform: uppercase;
+   text-align: center;
+   margin-top: 21px;
 }
 
-.reason .reason_block .reason_descr {
-  width: 343px;
+.promo .promo_text {
+   padding: 0 13px;
+	margin-top: 23px;
+   color: #ffffff;
+   font-size: 21px;
+   font-weight: 300;
+   line-height: 28px;
+	font-weight: 300;
+	text-align: center;
 }
 
-.reason .reason_block .reason_descr .reason_subtitle {
-  line-height: 21px;
-  color: #1eacc7;
-  font-size: 17px;
-  font-weight: 400;
+.promo .promo_text span {
+   color: #f9bf3b;
+   font-weight: 700;
 }
 
-.reasons .reasons_block .reasons_descr .reasons_text {
-  color: #202020;
-  font-size: 15px;
-  font-weight: 300;
-  line-height: 21px;
+.promo .promo_btn, .gift .gift_btn {
+	display: block;
+	margin: 0 auto;
+	margin-top: 73px;
+	width: 313px;
+	height: 72px;
+	-webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
+	        box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
+	border: 4px solid rgba(0, 0, 0, 0.23);
+	background-image: -webkit-gradient(linear, left bottom, left top, from(#2798b9), to(#3ab6da));
+	background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
+	text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.22);
+	color: #ffffff;
+	font-size: 21px;
+	font-weight: 400;
+	line-height: 24px;
+	text-transform: uppercase;
+	cursor: pointer;
+	outline: none;
+}
+
+.gift .gift_btn {
+	margin-top: 52px;
+	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+	        box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+	border: none;
+}
+.more{
+	margin-top: 73px;
+}
+
+.more .more_text{
+	color: #ffffff;
+	font-size: 15px;
+	font-weight: 400;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.more .more_img{
+	display: block;
+	margin: 0 auto;
+	margin-top: 13px;
+	
+}
+
+.waiting{
+	min-height: 604px;
+	background-color: #efefef;
+	padding: 85px 0 75px 0 
+}
+.waiting .waiting_header, .finish .finish_header {
+	color: #252525;
+	font-size: 30px;
+	font-weight: 400;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.waiting .waiting_divider, .finish .finish_diviver {
+	width: 217px;
+	height: 4px;
+	background-color: #f9bf3b;
+	margin: 0 auto;
+	margin-top: 18px;
+}
+
+ .finish .finish_header{
+	color:#fff;
+}
+
+.waiting .waiting_subheader {
+	margin-top: 17px;
+	color: #4a4a4a;
+	font-size: 23px;
+	line-height: 20px;
+	text-align: center;
+	
+}
+
+.waiting .waiting_wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	margin-top: 45px;
+}
+.waiting .waiting_wrapper .waiting_item {
+   width: 339px;
+	text-align: center;
+}
+.waiting .waiting_wrapper .waiting_item .waiting_img {
+	width: 100%;
+ }
+.waiting .waiting_wrapper .waiting_item .waitign_descr {
+	margin-top: 33px;
+	color: #4a4a4a;
+	font-size: 15px;
+	font-weight: 300;
+	line-height: 21px;
+}
+
+.optimization {
+min-height: 550px;
+padding: 102px 0 107px 0;
+}
+
+ .optimization .optimization_header {
+	margin-left: 391px;
+	color: #299cbd;
+	font-size: 30px;
+	font-weight: 900;
+	text-transform: uppercase;
+}
+
+.optimization .optimization_text {
+	margin-top: 25px;
+	margin-left: 391px;
+	color: #4a4a4a;
+	font-size: 17px;
+	font-weight: 300;
+	line-height: 27px;
+	font-weight: 300;
+}
+
+.optimization .optimization_text span {
+	font-weight: 700;
+}
+
+.optimization .optimization_img {
+	position: absolute;
+	top: -54px;
+	left: -240px;
+	z-index: -1;
+}
+
+.finish {
+	min-height: 447px;
+	padding: 86px 0 73px 0;
+	background: url(../img/second_bg.jpg) center center/ cover no-repeat;
+}
+
+.finish .finish_wrapper {
+	margin-top: 41px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+}
+
+.finish .finish_wrapper .finish_item {
+	width: 204px;
+}
+
+.finish .finish_wrapper .finish_round {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	align-items: center;
+	margin: 0 auto;
+	width: 115px;
+	height: 115px;
+	background-color: #b4e2ff;
+	border-radius: 100%;
+}
+
+.finish .finish_wrapper .finish_descr {
+	margin-top: 25px;
+	text-align: center;
+	color: #efefef;
+	font-size: 17px;
+	font-weight: 300;
+	line-height: 20px;
+}
+
+.gift {
+	min-height: 628px;
+	padding: 86px 0 87px 0;
+	background-color: #efefef;
+}
+
+.gift .gift_img {
+	display: block;
+	margin: 0 auto;
+}
+
+.gift .gift_text {
+	margin-top: 42px;
+	color: #252525;
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 43px;
+	text-align: center;
+}
+
+.first {
+	min-height: 515px;
+	padding: 89px 0 64px 0;
+}
+
+.first .first_img {
+	display: block;
+	margin: 0 auto;
+}
+
+.first .first_text {
+	margin-top: 37px;
+	color: #252525;
+	font-size: 30px;
+	font-weight: 400;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.first .date {
+	margin-top: 30px;
+	color: #299cbd;
+	font-size: 36px;
+	font-weight: 900;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.first .first_subtitle {
+	margin-top: 25px;
+	color: #4a4a4a;
+	font-size: 23px;
+	font-weight: 400;
+	text-align: center;
+}
+
+footer {
+	min-height: 166px;
+	background-color: #1a1a1a;
+	padding: 61px 0 69px 0;
+}
+
+.info {
+	margin: 0 auto;
+	width: 377px;
+	text-align: center;
+	color: #888888;
+	font-size: 15px;
+	font-weight: 300;
+	line-height: 21px;
+}
+
+footer a {
+	color: #888888;
+	font-size: 15px;
+	font-weight: 300;
+	line-height: 21px;
+	text-decoration: none;
+}
+
+.underlined {
+	text-decoration: underline;
 }
